--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h2><a class="a-log" href="/index.html">Rotaract Club</a></h2>
             <nav>
                 <ul>
-                    <li><a href="/about-us.html">Quienes Somos</a></li>
+                    <li><a href="#">Quienes Somos</a></li>
                     <li><a href="#">Contacto</a></li>
                     <li>
                         <form action="#">
